--- a/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
+++ b/src/_sass/sites/default/files/dynabook-b2b/assets_2025/css/00_04_object/project/business/_p-amd.scss
@@ -1022,30 +1022,42 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            position: relative;
             background-color: #000;
-            @include setSizePCCus2(padding-left, padding-right, 10, 10);
-            @include mediaQuery(sp) {
-              padding-left: pxToVw(10);
-              padding-right: pxToVw(10);
+            .text {
+              height: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              color: #fff;
+              background-color: #000;
+              clip-path: polygon(0% 0%, calc(100% - (10/1440)*100vw) 0%, 100% 50%, calc(100% - (10/1440)*100vw) 100%, 0 100%);
+              z-index: 2;
+              @include setSizePCCus4(padding, 2, 20, 2, 10);
+              @include mediaQuery(sp) {
+                padding: pxToVw(2) pxToVw(20) pxToVw(2) pxToVw(10);
+                clip-path: polygon(0% 0%, calc(100% - pxToVw(10)) 0%, 100% 50%, calc(100% - pxToVw(10)) 100%, 0 100%);
+              }
             }
-          }
-          &--arrow {
-            content: '';
-            @include setSizePCCus2(width, height, 13, 50);
-            background-image: url(#{$imagePath}business/amd/pclineup_arrow_01.png);
-            background-position: center top;
-            background-repeat: no-repeat;
-            background-size: cover;
-            @include setSizePCCus2(margin-left, margin-right, -1, -1);
-            @include mediaQuery(sp) {
-              width: pxToVw(13);
-              height: pxToVw(50);
-              margin-left: pxToVw(-1);
-              margin-right: pxToVw(-1);
+            &::after {
+              content: '';
+              position: absolute;
+              top: 0;
+              @include setSizePCCus(right, -4);
+              width: 100%;
+              height: 100%;
+              display: block;
+              clip-path: polygon(0% 0%, calc(100% - (10/1440)*100vw) 0%, 100% 50%, calc(100% - (10/1440)*100vw) 100%, 0 100%);
+              background-color: #750008;
+              z-index: 1;
+              @include mediaQuery(sp) {
+                clip-path: polygon(0% 0%, calc(100% - pxToVw(10)) 0%, 100% 50%, calc(100% - pxToVw(10)) 100%, 0 100%);
+                right: pxToVw(-4);
+              }
             }
           }
           &--value {
-            @include setSizePCCus2(padding-left, padding-right, 10, 10);
+            @include setSizePCCus2(padding-left, padding-right, 14, 10);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -1053,7 +1065,7 @@
             background-color: #000;
             @include mediaQuery(sp) {
               flex: 1;
-              padding-left: pxToVw(5);
+              padding-left: pxToVw(10);
               padding-right: pxToVw(5);
             }
           }
