--- a/src/_ejs/business/contents/amd/index.ejs
+++ b/src/_ejs/business/contents/amd/index.ejs
@@ -298,8 +298,9 @@ isTop:'true'
                   <div class="box-product__info">
                     <div class="box-product__cpu--wrap">
                       <div class="box-product__cpu">
-                        <p class="box-product__cpu--label">CPU</p>
-                        <p class="box-product__cpu--arrow"></p>
+                        <p class="box-product__cpu--label">
+                          <span class="text">CPU</span>
+                        </p>
                         <p class="box-product__cpu--value">AMD Ryzen™ PRO200シリーズプロセッサー・<br>AMD Ryzen™ 200シリーズプロセッサー</p>
                       </div>
                       <ul class="box-product__logos">
@@ -384,8 +385,9 @@ isTop:'true'
                   <div class="box-product__info">
                     <div class="box-product__cpu--wrap">
                       <div class="box-product__cpu">
-                        <p class="box-product__cpu--label">CPU</p>
-                        <p class="box-product__cpu--arrow"></p>
+                        <p class="box-product__cpu--label">
+                          <span class="text">CPU</span>
+                        </p>
                         <p class="box-product__cpu--value">AMD Ryzen™ PRO200シリーズプロセッサー・<br>AMD Ryzen™ 200シリーズプロセッサー</p>
                       </div>
                       <ul class="box-product__logos">
@@ -470,8 +472,9 @@ isTop:'true'
                   <div class="box-product__info">
                     <div class="box-product__cpu--wrap">
                       <div class="box-product__cpu">
-                        <p class="box-product__cpu--label">CPU</p>
-                        <p class="box-product__cpu--arrow"></p>
+                        <p class="box-product__cpu--label">
+                          <span class="text">CPU</span>
+                        </p>
                         <p class="box-product__cpu--value">AMD Ryzen™ PRO200シリーズプロセッサー・<br>AMD Ryzen™ 200シリーズプロセッサー</p>
                       </div>
                       <ul class="box-product__logos">
@@ -549,9 +552,12 @@ isTop:'true'
                   <div class="box-product__info">
                     <div class="box-product__cpu--wrap">
                       <div class="box-product__cpu">
-                        <p class="box-product__cpu--label">CPU</p>
-                        <p class="box-product__cpu--arrow"></p>
-                        <p class="box-product__cpu--value">AMD Ryzen™ 7000 シリーズ プロセッサー</p>
+                        <p class="box-product__cpu--label">
+                          <span class="text">CPU</span>
+                        </p>
+                        <p class="box-product__cpu--value">
+                          AMD Ryzen™ 7000 シリーズ プロセッサー
+                        </p>
                       </div>
                       <ul class="box-product__logos">
                         <li class="box-product__logos--item">
